--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
-body{
+.root{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body,
+html {
+  font-family: Montserrat, Helvetica, sans-serif;
   background-color: black;
+  margin: 0;
+  padding: 0;
 }
