--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,14 @@
 .root{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 body,
 html {
   font-family: Montserrat, Helvetica, sans-serif;
   background-color: black;
-  margin: 0;
-  padding: 0;
 }
 
 .App, .root {
   height: 100vh;
+  width : 100vh;
 }
