--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,6 +1,6 @@
-section{
-     max-width: 350px !important; 
-     min-width: 350px !important; 
+.side-containe{
+     max-width: 220px !important; 
+     min-width: 220px !important; 
     background-color: #00000E;
 }
 
@@ -13,14 +13,16 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 50px !important;
+    gap: 25px !important;
 }
 .mentionLeg{
-    margin-top: 9rem !important;   
+    cursor: pointer;
+    margin-top: 12rem !important;   
 }
 .icone-home{
     margin-top: 30px !important;
-    margin-bottom: 50px !important;
-    margin-left: 80px !important;
+    margin-bottom: 40px !important;
+    margin-left: 40px !important;
+    
 }
 
