feat : add autenthification style and fonctionality

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -25,4 +25,10 @@ img{
     margin-left: 40px !important;
     
 }
+.home{
+    font-size: 1.2rem;
+}
+.ic-home{
+    font-weight: 2rem !important;
+}
 
