--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -33,3 +33,7 @@ img {
     flex-direction: column;
     justify-content: flex-start;
 }
+.play-button{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
