--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -1,6 +1,13 @@
 
 .containe{
     height: 100vh;
-    width: 100vh;
-    display: flex;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 20vw 80vw;
+}
+
+.middle {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 20vh 80vh;
 }
