refactor : Go with css to all project

--- a/src/styles/autenthification.css
+++ b/src/styles/autenthification.css
@@ -1,10 +1,10 @@
- .containe{
+ .contain{
     text-align: center !important;
  }
- .contenu{
+ .contenus{
     margin: auto;
  }
- .contenu h1{
+ .contenus h1{
     width: 400px;
  }
  .autenth{
