--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap : 20px;
+    max-height: 90vh;
 }
 
 .main {
-    height: 80vh;
+    width: 80vw;
     overflow-y: scroll;
 }
 
