--- a/src/styles/autenthification.css
+++ b/src/styles/autenthification.css
@@ -1,18 +1,54 @@
- .contain{
-    text-align: center !important;
+ /* .contain{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: white;
+   margin: auto;
+   margin-left: 55rem;
+   max-width: 500px;
+   min-width: 500px;
+   max-height: 600px;
+   min-height: 600px;
  }
- .contenus{
-    margin: auto;
- }
- .contenus h1{
-    width: 400px;
+ .contenus {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap: 20px;
  }
  .autenth{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     gap: 30px;
+    margin-top: 30px;
  }
  .connecte{
-    margin-top: 50px;
+   display: flex;
+   flex-direction: column;
+   margin-top: 20px;
+   gap: 20px;
  }
+ h3{
+   margin-top: 50px;
+ }
+ input{
+   width: 400px;
+   height: 40px;
+   border-radius: 10px;
+   padding-left: 20px;
+   border: 1px solid rgba(0, 0, 0, 0.327)
+ }
+.connecte{
+   text-align: center;
+}
+button{
+   height: 40px;
+   border: 1px solid rgba(0, 0, 0, 0.327);
+   font-size: 20px;
+   cursor: pointer;
+}
+.connecte button:nth-child(1) a{
+   text-decoration: none;
+   color: black;
+} */
