--- a/src/styles/autenthification.css
+++ b/src/styles/autenthification.css
@@ -1,4 +1,4 @@
- .contain{
+ #contain{
    display: flex;
    justify-content: center;
    align-items: center;
@@ -14,34 +14,14 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
+   align-items: center;
    gap: 20px;
- }
- .autenth{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 30px;
-    margin-top: 10px;
- }
- .logo-Streaming{
-  text-align: center;
  }
  .logo-Streaming img{
   width: 100px;
   height: 100px;
  }
- .aunthent{
-  text-align: center;
- }
- .connecte{
-   display: flex;
-   flex-direction: column;
-   margin-top: 20px;
-   gap: 20px;
- }
- h3{
-   margin-top: 50px;
- }
+
  input{
    width: 400px;
    height: 40px;
@@ -62,8 +42,9 @@ button{
    font-size: 20px;
    cursor: pointer;
    color: rgb(42, 133, 219);
+   width: 420px;
 }
-.connecte button:nth-child(1) a{
+button a{
    text-decoration: none;
 }
 .icon-google{
